--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -8,7 +8,7 @@
 // Colors for buttons status etc.
 // --------------------------------------------------
 @default: #ededed;
-@primary: #708fa0;
+@primary: #189acd;
 @info: #6fdbe8;
 @success: #97d271;
 @warning: #fdd198;
