--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -60,7 +60,7 @@
 @background-color-highlight: #fff8e0;
 
 // Additional background colors
-@background3: #d7d7d7;
+@background3:  #f2f2f2;
 @background4: #b2b2b2;
 
 //
