--- a/static/less/mentioning.less
+++ b/static/less/mentioning.less
@@ -11,7 +11,7 @@
   color: #555555;
   font-size: 14px;
   font-weight: 400;
-  border: 1px solid #d7d7d7;
+  border: 1px solid  #f2f2f2;
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
