--- a/static/less/panel.less
+++ b/static/less/panel.less
@@ -17,7 +17,7 @@
         .heading;
         border-radius: 4px;
         .heading-link {
-            color:#6fdbe8 !important;
+            color:#46b2ec !important;
             font-size: 0.8em;
         }
     }
