--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -9,7 +9,7 @@
 // --------------------------------------------------
 @default: #ededed;
 @primary: #189acd;
-@info: #6fdbe8;
+@info: #46b2ec;
 @success: #97d271;
 @warning: #fdd198;
 @danger: #ff8989;
